feat: implement WebSocket support, add CORS handlers, and perform extensive dependency cleanup and refactoring