@@ -11,9 +11,9 @@ public class UrlUtilTest {
 
 	@Test
 	public void urlJoinTest() throws MalformedURLException {
-		assertEquals("http://tt.se/start/", UrlUtil.urlJoin(new URL("http://tt.se/"), "/start/"));
-		assertEquals("http://localhost.com/", UrlUtil.urlJoin(new URL("http://localhost.com/moved_perm"), "/"));
-		assertEquals("https://github.com/", UrlUtil.urlJoin(new URL("http://github.com/"), "https://github.com/"));
+		assertEquals("http://tt.se/start/", UrlUtil.urlJoin(java.net.URI.create("http://tt.se/").toURL(), "/start/"));
+		assertEquals("http://localhost.com/", UrlUtil.urlJoin(java.net.URI.create("http://localhost.com/moved_perm").toURL(), "/"));
+		assertEquals("https://github.com/", UrlUtil.urlJoin(java.net.URI.create("http://github.com/").toURL(), "https://github.com/"));
 	}
 	
 }
